--- a/dokument.html
+++ b/dokument.html
@@ -5,8 +5,9 @@
 <title>Lab1</title>
 </head>
 <body>
-<h1>Hello world</h1>
 <table>
+<thead><tr><th colspan='5'>Hello World!</th></tr></thead>
+<tbody>
 <tr>
 <td>[1,1]</td>
 <td>[1,2]</td>
@@ -42,6 +43,8 @@
 <td>[5,4]</td>
 <td>[5,5]</td>
 </tr>
+</tbody>
+<tfoot><tr><td colspan='5'>Witaj świecie!</td></tr></tfoot>
 </table>
 </body>
 </html>
