--- a/dokument.html
+++ b/dokument.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <table>
-<thead><tr><th colspan='5'>Hello World!</th></tr></thead>
+<thead><tr>
+<th colspan='5'>Hello World!</th>
+</tr></thead>
 <tbody>
 <tr>
 <td>[1,1]</td>
@@ -15,36 +17,10 @@
 <td>[1,4]</td>
 <td>[1,5]</td>
 </tr>
-<tr>
-<td>[2,1]</td>
-<td>[2,2]</td>
-<td>[2,3]</td>
-<td>[2,4]</td>
-<td>[2,5]</td>
-</tr>
-<tr>
-<td>[3,1]</td>
-<td>[3,2]</td>
-<td>[3,3]</td>
-<td>[3,4]</td>
-<td>[3,5]</td>
-</tr>
-<tr>
-<td>[4,1]</td>
-<td>[4,2]</td>
-<td>[4,3]</td>
-<td>[4,4]</td>
-<td>[4,5]</td>
-</tr>
-<tr>
-<td>[5,1]</td>
-<td>[5,2]</td>
-<td>[5,3]</td>
-<td>[5,4]</td>
-<td>[5,5]</td>
-</tr>
 </tbody>
-<tfoot><tr><td colspan='5'>Witaj świecie!</td></tr></tfoot>
+<tfoot><tr>
+<td colspan='5'>Witaj świecie!</td>
+</tr></tfoot>
 </table>
 </body>
 </html>
