okienkowy interfejs serwera - do poprawy obsługa wątku roboczego

--- a/Lab2_tmp/index.html
+++ b/Lab2_tmp/index.html
@@ -2,25 +2,11 @@
 <html>
 <head>
 <meta charset='UTF-8'>
-<title>Lab1</title>
+<title>Lab2</title>
 </head>
 <body>
-<table>
-<thead><tr>
-<th colspan='5'>Hello World!</th>
-</tr></thead>
-<tbody>
-<tr>
-<td>[1,1]</td>
-<td>[1,2]</td>
-<td>[1,3]</td>
-<td>[1,4]</td>
-<td>[1,5]</td>
-</tr>
+<h1>Index</h1>
 </tbody>
-<tfoot><tr>
-<td colspan='5'>Witaj świecie!</td>
-</tr></tfoot>
 </table>
 </body>
 </html>
